--- a/Views/Shared/_RiskManagerLayoutPage.cshtml
+++ b/Views/Shared/_RiskManagerLayoutPage.cshtml
@@ -123,7 +123,7 @@
             <div class="sidepanel-inner d-flex flex-column">
                 <a href="#" id="sidepanel-close" class="sidepanel-close d-xl-none">&times;</a>
                 <div class="app-branding">
-                    <a class="app-logo" href="index.html"><img class="logo-icon me-2" src="~/images/iconRiskManagement.png" alt="logo"><span class="logo-text">Risk Management</span></a>
+                    <a class="app-logo" asp-controller="RiskManager" asp-action="Index"><img class="logo-icon me-2" src="~/images/iconRiskManagement.png" alt="logo"><span class="logo-text">Risk Management</span></a>
 
                 </div><!--//app-branding-->  
 
