--- a/Views/DivisionMember/Index.cshtml
+++ b/Views/DivisionMember/Index.cshtml
@@ -1,12 +1,20 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Division Member Dashboard";
     Layout = "~/Views/Shared/_DivisionMemberLayoutPage.cshtml";
 }
 
 <div class="app-content pt-3 p-md-3 p-lg-4">
     <div class="container-xl">
-        <div class="bgKonten"><h1 class="app-page-title mb-4 p-3">Dashboard (Heat Map)</h1></div>
+        <div class="bgKonten">
+            <h1 class="app-page-title mb-4 p-3">
+                Dashboard (Heat Map)
+
+                <span class="float-end">
+                    <a class="btn btn-success text-white" asp-controller="RegistrasiRisiko" asp-action="Create"><i class="fa-solid fa-plus"></i> Registrasi Proyek</a>
+                </span>
+            </h1>
+        </div>
+
         <div class="bgKonten">
             <div class="mb-4 p-3">
                 <div class="row">
